# ReaBooKivyMD

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  __init__.py  babel.cfg  buildozer.spec  dodo.py  main.kv  main.py  pyproject.toml  reaboo.kv
App/: cardset.py  main.py  reaboo.kv  screen_cardset.kv  screen_dict.kv
Database/: data_base.py  database.py  dictionary.db  schema.sql  tests_database.py
app/: cardset.kv  cardset.py  main.py  reaboo.kv  screen_cardset.kv  screen_dict.kv  study.kv  study.py
app/database/: __init__.py  database.py  new_database.py  new_schema.sql  schema.sql  tests_database.py
database/: database.py  new_database.py
po/ru_RU.UTF-8/LC_MESSAGES/: reaboo.po
source/: conf.py  database.rst  gui.rst  index.rst
tests/: DataBase.py
