[project]
name = "ReaBoo"
version = "1.1"
description = "Study application"
readme = "README.md"
license = {text = "MIT-0"}
authors = [
 {name = "Ruslan Khaydarpashich", email = "h.ruslan2000@yandex.ru"}
]
dependencies = [
    "kivymd"
]


[build-system]
requires = [
    "Sphinx", "doit", "flake8", "pydocstyle", "kivy", "kivymd", "setuptools"
]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-dir]
ReaBoo = "."


[tool.setuptools.package-data]
ReaBoo = ["po/*/*/*.mo", "*.kv"]
"ReaBoo.Database" = ["schema.sql", "database.py"]
