[project]
name = "ReaBoo"
version = "1.2.0"
description = "Default template for PDM package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ruslan Khaydarpashich", email = "h.ruslan2000@yandex.ru"},
    {name = "Ruslan Khaydarpashich", email = "khayrusaf@gmail.com"},
]
dependencies = [
    "kivymd @ https://github.com/kivymd/KivyMD/archive/master.zip",
    "doit",
    "Sphinx",
    "setuptools",
    "pre-commit>=3.7.1",
    # "https://github.com/kivymd/KivyMD/archive/master.zip",
]
requires-python = "==3.10.*"


[tool.setuptools.package-dir]
ReaBoo = "."


[tool.setuptools.package-data]
ReaBoo = ["po/*/*/*.mo", "*.kv"]
"ReaBoo.Database" = ["schema.sql", "database.py"]

[tool.pdm]
distribution = false
