[project]
name = "ReaBoo"
version = "1.2.0"
description = "Default template for PDM package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ruslan Khaydarpashich", email = "h.ruslan2000@yandex.ru"},
    {name = "Ruslan Khaydarpashich", email = "khayrusaf@gmail.com"},
]
dependencies = [
    "kivymd @ https://github.com/kivymd/KivyMD/archive/master.zip",
    "kvhot>=2024.2.7",
]
requires-python = "==3.10.*"


[tool.setuptools.package-dir]
ReaBoo = "."


[tool.setuptools.package-data]
ReaBoo = ["po/*/*/*.mo", "*.kv"]
"ReaBoo.Database" = ["schema.sql", "database.py"]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
buildozer = [
    "Cython>=3.0.11",
    "python-for-android",
]
doc = [
    "Sphinx>=8.0.2",
]
codestyle = [
    "pre-commit>=3.8.0",
]
cli = [
    "doit>=0.36.0",
]
